# pylint-odoo

./: .bumpversion.cfg  .coveragerc  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .prettierrc.cjs  .prettierrc.yml  .pylintrc  .travis.yml  ChangeLog  README.md  README.rst  install.sh  pyproject.toml  pytest.ini  requirements.txt  requirements_test.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
.github/workflows/: pylint-odoo.yml  stale.yml  test.yml
customizations/lodi_addenda_mayasa/: __manifest__.py
customizations/lodi_addenda_mayasa/views/: addenda.xml
customizations/lodi_so_sku/: __manifest__.py
customizations/lodi_so_sku/models/: __init__.py  account_move_line.py  product_partner_sku.py  product_product.py
customizations/lodi_so_sku/report/: invoice_report_templates.xml  sale_report_templates.xml
customizations/lodi_so_sku/security/: ir.model.access.csv
customizations/lodi_so_sku/views/: cfdi_views.xml  product_partner_sku_views.xml  product_views.xml
customizations/lodi_vendor_bill_validation/: __manifest__.py
customizations/lodi_vendor_bill_validation/i18n/: es_MX.po
customizations/lodi_vendor_bill_validation/models/: __init__.py  account_move.py  account_tax.py  res_partner.py
customizations/lodi_vendor_bill_validation/security/: ir.model.access.csv
customizations/lodi_vendor_bill_validation/views/: account_move_views.xml  account_tax_views.xml  res_partner_views.xml
customizations/lodi_vendor_bill_validation/wizard/: __init__.py  vendor_bill_attachment_wizard.py  vendor_bill_attachment_wizard_views.xml
pylint_odoo/: __init__.py  misc.py  plugin.py  settings.py
pylint_odoo/augmentations/: main.py
pylint_odoo/checkers/: __init__.py  format.py  modules_odoo.py  no_modules.py  odoo_base_checker.py
pylint_odoo/examples/: .jshintrc  .jslintrc  .pylintrc
pylint_odoo/test/: main.py
pylint_odoo/test_repo/broken_module/: __init__.py  __openerp__.py  broken_example.js  coding_latin.py  ir.model.access.csv  model_view.xml  model_view2.xml  model_view_odoo.xml  model_view_odoo2.xml  pylint_oca_broken.py  report.xml  skip_file_not_used.xml  skip_xml_check.xml  skip_xml_check_2.xml  skip_xml_check_3.xml  xml_special_char.xml
pylint_odoo/test_repo/broken_module/demo/: duplicated_id_demo.xml
pylint_odoo/test_repo/broken_module/i18n/: es.po  es_syntax_err.po
pylint_odoo/test_repo/broken_module/lib/: tab_no_check.js
pylint_odoo/test_repo/broken_module/models/: __init__.py  broken_model.py  model_inhe1.py  model_inhe2.py
pylint_odoo/test_repo/broken_module/tests/: test_model.py  xml_not_important_1.xml
pylint_odoo/test_repo/broken_module2/: README.rst  __openerp__.py  ir.model.access.csv
pylint_odoo/test_repo/broken_module2/i18n/: en.po
pylint_odoo/test_repo/broken_module3/: __openerp__.py
pylint_odoo/test_repo/eleven_module/: __init__.py  models.py  utf8_models.py
pylint_odoo/test_repo/eleven_module/import/: not_used_from_manifest.xml
pylint_odoo/test_repo/no_odoo_module/: __init__.py  eval_used.py  myfile.py
pylint_odoo/test_repo/pylint_deprecated_modules/: README.md
pylint_odoo/test_repo/test_module/: __openerp__.py  absolute_import.py  except_pass.py  ir.model.access.csv  osv_expression.py  res_users.xml  test_example.js  website_templates.xml
pylint_odoo/test_repo/test_module/i18n/: fr.po
pylint_odoo/test_repo/twelve_module/: __init__.py  __manifest__.py  models.py  utf8_models.py
src/pylint_odoo/: __init__.py  misc.py  plugin.py  settings.py
src/pylint_odoo/augmentations/: main.py
src/pylint_odoo/checkers/: __init__.py  custom_logging.py  format.py  import_checker.py  modules_odoo.py  no_modules.py  odoo_addons.py  odoo_base_checker.py  vim_comment.py
testing/resources/: .pylintrc-odoo-deprecated-model-methods
tests/: test_main.py
(+77 files in other folders)
