[metadata]
name = pylint-odoo
author = Odoo Community Association (OCA)
author_email = support@odoo-community.org
summary = Pylint plugin for Odoo
license = APGL3
home_page = https://github.com/OCA/pylint-odoo
description-file =
    README.rst
    ChangeLog
requires-python = >=2.7
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Operating System :: POSIX :: Linux
    Programming Language :: Python
[files]
packages =
    pylint_odoo
