[metadata]
name = pylint-odoo
version = 9.1.3
author = Odoo Community Association (OCA)
author_email = support@odoo-community.org
summary = Pylint plugin for Odoo
long_description_content_type = text/markdown
license = APGL3
home_page = https://github.com/OCA/pylint-odoo
requires_python = >=3.8
classifier =
    Development Status :: 6 - Mature
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Debuggers
    Topic :: Software Development :: Quality Assurance
    Topic :: Software Development :: Testing

[options]
package_dir=
    =src
packages=find:

[options.packages.find]
where=src

[options.data_files]
requirements =
    requirements.txt
